# fanalyzer

./: .clippy.toml  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.trae/rules/: project_rules.md
config/: default.toml  portfolio.toml  portfolio_insights.toml  watchlist.toml
docs/: AGENT.md  ARCHITECTURE.md  DATA_MODEL.md  DISCLAIMER.md  MANUAL.md
schemas/: envelope.failure.json  envelope.v1.json  index.json  tools.v1.agent.embedded.json  tools.v1.agent.json  tools.v1.json
schemas/models/: fund_analysis.json  fund_analysis_report.json  fund_brief.json  fund_nav.json  fund_overview.json  portfolio_report.json
schemas/responses/: analyze.success.json  brief.success.json  compare.success.json  export.success.json  fetch.success.json  holdings.success.json  info.success.json  portfolio.success.json  portfolio_config.success.json  rank.success.json  research_fund.success.json  screen.success.json  sectors.success.json  watchlist.success.json
scripts/: check_code_metrics.py  commit_msg_check.py  generate_schemas.py
src/: analysis_period.rs  cache.rs  insight_config.rs  lib.rs  main.rs  nav_cache.rs  portfolio.rs  watchlist.rs
src/api/: eastmoney.rs  eastmoney_error.rs  eastmoney_helpers.rs  eastmoney_ranking.rs  eastmoney_types.rs  f10_apidata.rs  f10_jbgk.rs  f10_jjjl.rs  fund_allocation.rs  fund_holdings.rs  fund_industry.rs  fund_ranking.rs  mod.rs  nav_merge.rs
src/application/: analyze.rs  brief.rs  compare.rs  concurrency.rs  context.rs  data_source.rs  export.rs  fund_service.rs  mappers.rs  mod.rs  output_profile.rs  portfolio.rs  portfolio_config.rs  queries.rs  research_fund.rs  screen.rs  test_support.rs  watchlist_ops.rs
src/cli/: analysis_sort.rs  analyze.rs  brief.rs  compare.rs  compare_output.rs  dispatch.rs  dispatch_agent.rs  dispatch_query.rs  dispatch_query_handlers.rs  dispatch_query_info.rs  dispatch_workflow.rs  fund_code_arg.rs  fund_session.rs  handlers.rs  json_commands.rs  mod.rs  output.rs  route.rs  route_handlers.rs  screen.rs  structured_runner.rs
src/config/: mod.rs
src/domain/: analyzer.rs  benchmark.rs  mod.rs  overlap.rs  period.rs  portfolio_insights.rs  rank_kind.rs  returns.rs  rolling.rs  screen_filter.rs  types.rs
src/mcp/: executor.rs  mod.rs  protocol.rs  resources.rs  server.rs
src/models/: mod.rs  portfolio.rs  reports.rs  series.rs
src/presentation/: analysis.rs  brief.rs  comparison.rs  fetch.rs  mod.rs  portfolio.rs  query_output.rs  screen_output.rs  structured.rs
src/schema/: agent_tools.rs  export.rs  mod.rs  paths.rs  responses.rs  tools.rs
src/services/: analyzer.rs  mod.rs
src/web/: chart_components.rs  charts.rs  components.rs  mod.rs  portfolio_components.rs  portfolio_draft.rs  routes.rs  services.rs  state.rs  style.css
tests/: integration_test.rs  mcp_schema_contract_test.rs  schema_contract_test.rs  test_fixtures.rs
tests/fixtures/api/: hypz_sample.js  jjcc_sample.js  jjjl_sample.html
