[package]
name = "fanalyzer"
version = "0.1.0"
edition = "2021"
description = "Fanalyzer — fund analysis CLI for personal research"
license = "MIT"
repository = "https://github.com/noisystreet/fanalyzer"
readme = "README.md"
keywords = ["fund", "finance", "analysis", "fanalyzer"]
categories = ["finance"]

[dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
toml = "1.1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
dirs = "5"
regex = "1"
comfy-table = { version = "7", default-features = false, features = ["default"] }
schemars = { version = "1", features = ["chrono04"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
jsonschema = "0.29"
